--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -3,7 +3,8 @@ name: Waka Readme
 on:
     workflow_dispatch:
     schedule:
-        - cron: '30 16 * * *'
+        # Runs every 2 hours
+        - cron: "0 */2 * * *"
 
 jobs:
     update-readme:
@@ -11,23 +12,5 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: athul/waka-readme@master
-            - uses: anmol098/waka-readme-stats@master
-                with:
-                    COMMIT_BY_ME: "True"
-                    COMMIT_MESSAGE: "Updated dev metrics"
-                    COMMIT_USERNAME: "vcsil"
-                    COMMIT_EMAIL: "vcsilva@poli.ufrj.br"
-                    WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-                    GH_TOKEN: ${{ secrets.GH_ADMIN_TOKEN }}
-                    USERNAME: vcsil # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
-                    SHOW_OS: "False"
-                    SHOW_PROJECTS: "True"
-                    SHOW_PROFILE_VIEWS: "False"
-                    SHOW_EDITORS: "False"
-                    SHOW_LANGUAGE: "True"
-                    SHOW_LANGUAGE_PER_REPO: "False"
-                    SHOW_LINES_OF_CODE: "True"
-                    SHOW_COMMIT: "True"
-                    SHOW_LOC_CHART: "True"
-                    SHOW_DAYS_OF_WEEK: "True"
-                    SHOW_SHORT_INFO: "True"
+              with:
+                  WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
