--- a/.github/workflows/update-timestats.yml
+++ b/.github/workflows/update-timestats.yml
@@ -17,7 +17,7 @@ jobs:
                   COMMIT_USERNAME: "vcsil"
                   COMMIT_EMAIL: "vcsilva@poli.ufrj.br"
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+                  GH_TOKEN: ${{ secrets.GH_ADMIN_TOKEN }}
                   USERNAME: vcsil # optional, it will automatically use the username of the owner of the repository who's executing the workflow.
                   SHOW_OS: "False"
                   SHOW_PROJECTS: "True"
