--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -6,12 +6,15 @@ on:
     workflow_dispatch:
 
 jobs:
-    build:
+    recent-activity:
+        name: "Update README with latest activity"
         runs-on: ubuntu-latest
-        name: Update this repo's README with recent activity
-
         steps:
-            - uses: actions/checkout@v2
-            - uses: jamesgeorge007/github-activity-readme@master
+            - name: "Checkout Repository"
+              uses: actions/Checkout@v3
+            - name: "Update README.md from TEMPLATE.md"
+              uses: Readme-Workflows/recent-activity@main
               env:
-                  GITHUB_TOKEN: ${{ secrets.GH_ADMIN_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  CONFIG_FILE: "sample.yml"
