--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update recent github activity
 
 on:
     schedule:
-        - cron: "0 * * * *"
+        - cron: "* 6 * * *"
     workflow_dispatch:
 
 jobs:
