--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -17,4 +17,4 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  CONFIG_FILE: "sample.yml"
+                  CONFIG_FILE: "./.github/recent-activity.config.yml"
